[package]
name = "binance-trader-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
fake-useragent = "0.1.3"
webhook = { version = "2.1.2", features = ["models"] }
chrono = "0.4"
rand = "0.8.5"
